<resources>
    <string name="app_name">proFarmingApp</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_after_login_with_navigation_bar">afterLoginWithNavigationBar</string>
    <string name="Logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="plant_disease_detector">Plant Disease Detector</string>
    <string name="plant_disease_upload">Plant disease Upload</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_chart">Chart</string>
    <string name="Settings">Settings</string>
    <string name="title_activity_navgation_bar">navgationBarActivity</string>

    <string name="EmailAddress">Email ID</string>
    <string name="Password">Password</string>
    <string name="signup">Don\'t have an account? Sign Up</string>


    <string name="AlreadyHaveAnAccount">Already have an account? Log In</string>
    <string name="valveStatus">valve Status</string>
    <string name="chart">chart</string>
    <string name="Weather">Weather</string>
    <string name="InformationandUsefulTechniques">Information and Useful Techniques</string>
    <string name="FertilizerPump"> Fertilizer Pump</string>
    <string name="NitrogenValve"> Nitrogen Valve</string>
    <string name="PhosphorousValve"> Phosphorous Valve</string>
    <string name="PotassiumValve"> Potassium Valve</string>
    <string name="WaterPump"> Water Pump</string>
    <string name="VALVESTATUS">VALVE STATUS</string>


</resources>
