<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.raj.profarmingapp.valveStatusActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/materialColor"
        android:gravity="center"
        android:text="@string/VALVESTATUS"
        android:textColor="@android:color/black"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/textView"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp">

        <Switch
            android:id="@+id/fertilizerPump"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/FertilizerPump"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/nitrogenValve"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/NitrogenValve"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/phosphorousValve"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/PhosphorousValve"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/potassiumValve"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/PotassiumValve"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/waterPump"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/WaterPump"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>
